parslers-benchmark/src/tests/invalid/syntaxErr/expressions/printlnConcat.wacc
# string concatenation is not part of the language

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  println "Hello " ++ "World!"
end
